k8s/opa_gatekeeper/01-templates/enforce_network_policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: enforcenetworkpolicy
spec:
  crd:
    spec:
      names:
        kind: EnforceNetworkPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package enforcenetworkpolicy
        violation[{"msg": msg}] {
          ns := input.review.object.metadata.namespace
          policies := object.get(object.get(data.inventory.namespace, ns, {}), "networking.k8s.io/v1", {})
          networkpolicies := object.get(policies, "NetworkPolicy", {})
          valid_deny_policies := [p |
            p := networkpolicies[_]
            is_default_deny(p.spec)
          ]
          count(valid_deny_policies) == 0
          msg := sprintf("Namespace '%v' does not have a network policy", [ns])
        }

        is_default_deny(spec) {
          object.get(spec, "podSelector", {}) == {}
          types := object.get(spec, "policyTypes", [])
          has_item(types, "Ingress")
          has_item(types, "Egress")
        }

        has_item(arr, item) {
          arr[_] == item
        }
