k8s/opa_gatekeeper/01-templates/enforce_rbac_service_account.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: enforcerbacserviceaccount
spec:
  crd:
    spec:
      names:
        kind: EnforceRBACServiceAccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package enforcerbacserviceaccount
        violation[{"msg": msg}] {
          pod_spec := get_pod_spec(input.review.object)
          pod := object.get(input.review.object.metadata, "name", input.review.object.metadata.generateName)
          not pod_spec.serviceAccountName
          msg := sprintf("Service account is not configured for pod '%v'", [pod])
        }

        violation[{"msg": msg}] {
          pod_spec := get_pod_spec(input.review.object)
          pod := object.get(input.review.object.metadata, "name", input.review.object.metadata.generateName)
          pod_spec.serviceAccountName == "default"
          msg := sprintf("Default service account is not allowed for pod '%v'", [pod])
        }

        violation[{"msg": msg}] {
          kinds := {"RoleBinding", "ClusterRoleBinding"}
          kinds[input.review.kind.kind]
          forbidden_roles := {"cluster-admin", "admin", "edit"}
          role_name := input.review.object.roleRef.name
          forbidden_roles[role_name]
          msg := sprintf("Assigning the built in role '%v' is prohibited", [role_name])
        }

        violation[{"msg": msg}] {
          kinds := {"Role", "ClusterRole"}
          kinds[input.review.kind.kind]
          rule := input.review.object.rules[_]
          wildcard(rule)
          msg := sprintf("Role '%v' is not allowed to use Wildcard '*' permissions", [input.review.object.metadata.name])
        }

        wildcard(rule) { rule.verbs[_] == "*" }
        wildcard(rule) { rule.resources[_] == "*" }
        wildcard(rule) { rule.apiGroups[_] == "*" }

        get_pod_spec(obj) = spec {
          obj.kind == "Pod"
          spec := obj.spec
        }

        get_pod_spec(obj) = spec {
          spec := obj.spec.template.spec
        }
